// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidePage keepMounted sidePage always in the document 1`] = `
<body
  style=""
>
  <div>
    <div>
      <button
        class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-3dyhpy-QxBaseButton-root-QxButton-root"
        data-testid="buttonTestId"
        type="button"
      />
    </div>
  </div>
  <div
    aria-hidden="true"
    class="QxOverScreen QxOverScreen_placement_right QxModal QxModal_size_medium QxModal_scrollBehaviour_body QxModal_hasHeader QxSidePage css-1t42n66-QxOverScreen-root-QxModal-root-QxSidePage-root"
    data-component="QxOverScreen"
    data-index="0"
    datatype="overscreen"
    role="presentation"
    tabindex="0"
  >
    <div
      aria-hidden="true"
      class="QxBackdrop css-s2jrcg-QxBackdrop-root-QxBackdrop-root"
      data-component="QxBackdrop"
    />
    <div
      class="QxModal-scrollContainer QxSidePage-scrollContainer css-1i0aqxr-QxSidePage-scrollContainer-QxModal-scrollContainer-QxSidePage-scrollContainer-QxModal-scrollContainer"
      data-component="QxOverScreen-child"
    >
      <div
        class="QxModal-box QxSidePage-box css-3oh5up-QxSidePage-box-QxModal-box"
      >
        <div
          class="QxHeaderBlock QxHeaderBlock_size_medium css-9oje8r-QxHeaderBlock-root"
        >
          <div
            class="QxHeaderBlock-content css-8aatdw-QxHeaderBlock-content"
          >
            <div
              class="QxHeaderBlock-title css-1p40syo-QxHeaderBlock-title"
            >
              Title
            </div>
            <div
              class="QxHeaderBlock-subTitle css-12h5hex-QxHeaderBlock-subTitle"
            >
              SubTitle
            </div>
          </div>
          <button
            class="QxBaseButton QxBaseButton_size_small QxBaseButton_color_secondary QxBaseButton_type_text QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_small QxHeaderBlock-closeButton css-yj9ie1-QxBaseButton-root-QxIconButton-root-QxHeaderBlock-closeButton"
            type="button"
          >
            <div
              class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
            >
              <svg
                fill="none"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.70714 17.7071C7.31661 18.0976 6.68345 18.0976 6.29292 17.7071C5.9024 17.3166 5.9024 16.6834 6.29292 16.2929L10.5858 12L6.29293 7.70711C5.9024 7.31658 5.9024 6.68342 6.29293 6.29289C6.68345 5.90237 7.31662 5.90237 7.70714 6.29289L12 10.5858L16.2929 6.29289C16.6834 5.90237 17.3166 5.90237 17.7071 6.29289C18.0977 6.68342 18.0977 7.31658 17.7071 7.70711L13.4142 12L17.7071 16.2929C18.0977 16.6834 18.0977 17.3166 17.7071 17.7071C17.3166 18.0976 16.6834 18.0976 16.2929 17.7071L12 13.4142L7.70714 17.7071Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </button>
        </div>
        <div
          class="QxModal-body css-r81a94-QxModal-body"
        >
          Body
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`SidePage keepMounted sidePage always in the document 2`] = `
<body
  style="padding-right: 1024px; overflow: hidden;"
>
  <div>
    <div>
      <button
        class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-3dyhpy-QxBaseButton-root-QxButton-root"
        data-testid="buttonTestId"
        type="button"
      />
    </div>
  </div>
  <div
    aria-hidden="false"
    class="QxOverScreen QxOverScreen_placement_right QxOverScreen_mounted QxModal QxModal_size_medium QxModal_scrollBehaviour_body QxModal_hasHeader QxSidePage css-1tn48qf-QxOverScreen-root-QxModal-root-QxSidePage-root"
    data-component="QxOverScreen"
    data-index="0"
    datatype="overscreen"
    role="presentation"
    tabindex="0"
  >
    <div
      aria-hidden="false"
      class="QxBackdrop css-lak5sv-QxBackdrop-root-QxBackdrop-root enter-active"
      data-component="QxBackdrop"
    />
    <div
      class="QxModal-scrollContainer QxSidePage-scrollContainer css-zezqa0-QxSidePage-scrollContainer-QxModal-scrollContainer-QxSidePage-scrollContainer-QxModal-scrollContainer enter-active"
      data-component="QxOverScreen-child"
    >
      <div
        class="QxModal-box QxSidePage-box css-3oh5up-QxSidePage-box-QxModal-box"
      >
        <div
          class="QxHeaderBlock QxHeaderBlock_size_medium css-9oje8r-QxHeaderBlock-root"
        >
          <div
            class="QxHeaderBlock-content css-8aatdw-QxHeaderBlock-content"
          >
            <div
              class="QxHeaderBlock-title css-1p40syo-QxHeaderBlock-title"
            >
              Title
            </div>
            <div
              class="QxHeaderBlock-subTitle css-12h5hex-QxHeaderBlock-subTitle"
            >
              SubTitle
            </div>
          </div>
          <button
            class="QxBaseButton QxBaseButton_size_small QxBaseButton_color_secondary QxBaseButton_type_text QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_small QxHeaderBlock-closeButton css-yj9ie1-QxBaseButton-root-QxIconButton-root-QxHeaderBlock-closeButton"
            type="button"
          >
            <div
              class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
            >
              <svg
                fill="none"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.70714 17.7071C7.31661 18.0976 6.68345 18.0976 6.29292 17.7071C5.9024 17.3166 5.9024 16.6834 6.29292 16.2929L10.5858 12L6.29293 7.70711C5.9024 7.31658 5.9024 6.68342 6.29293 6.29289C6.68345 5.90237 7.31662 5.90237 7.70714 6.29289L12 10.5858L16.2929 6.29289C16.6834 5.90237 17.3166 5.90237 17.7071 6.29289C18.0977 6.68342 18.0977 7.31658 17.7071 7.70711L13.4142 12L17.7071 16.2929C18.0977 16.6834 18.0977 17.3166 17.7071 17.7071C17.3166 18.0976 16.6834 18.0976 16.2929 17.7071L12 13.4142L7.70714 17.7071Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </button>
        </div>
        <div
          class="QxModal-body css-r81a94-QxModal-body"
          style="min-height: NaNpx;"
        >
          Body
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`SidePage sidePage in the document 1`] = `
<body
  style=""
>
  <div>
    <div>
      <button
        class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-3dyhpy-QxBaseButton-root-QxButton-root"
        data-testid="buttonTestId"
        type="button"
      />
    </div>
  </div>
</body>
`;

exports[`SidePage sidePage in the document 2`] = `
<body
  style="padding-right: 1024px; overflow: hidden;"
>
  <div>
    <div>
      <button
        class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-3dyhpy-QxBaseButton-root-QxButton-root"
        data-testid="buttonTestId"
        type="button"
      />
    </div>
  </div>
  <div
    aria-hidden="false"
    class="QxOverScreen QxOverScreen_placement_right QxOverScreen_mounted QxModal QxModal_size_medium QxModal_scrollBehaviour_body QxModal_hasHeader QxModal_hasFooter QxSidePage css-1tn48qf-QxOverScreen-root-QxModal-root-QxSidePage-root"
    data-component="QxOverScreen"
    data-index="0"
    datatype="overscreen"
    role="presentation"
    tabindex="0"
  >
    <div
      aria-hidden="false"
      class="QxBackdrop css-lak5sv-QxBackdrop-root-QxBackdrop-root appear-active"
      data-component="QxBackdrop"
    />
    <div
      class="QxModal-scrollContainer QxSidePage-scrollContainer css-zezqa0-QxSidePage-scrollContainer-QxModal-scrollContainer-QxSidePage-scrollContainer-QxModal-scrollContainer appear-active"
      data-component="QxOverScreen-child"
    >
      <div
        class="QxModal-box QxSidePage-box css-3oh5up-QxSidePage-box-QxModal-box"
      >
        <div
          class="QxHeaderBlock QxHeaderBlock_size_medium css-9oje8r-QxHeaderBlock-root"
        >
          <div
            class="QxHeaderBlock-content css-8aatdw-QxHeaderBlock-content"
          >
            <div
              class="QxHeaderBlock-title css-1p40syo-QxHeaderBlock-title"
            >
              Title
            </div>
            <div
              class="QxHeaderBlock-subTitle css-12h5hex-QxHeaderBlock-subTitle"
            >
              SubTitle
            </div>
          </div>
          <button
            class="QxBaseButton QxBaseButton_size_small QxBaseButton_color_secondary QxBaseButton_type_text QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_small QxHeaderBlock-closeButton css-yj9ie1-QxBaseButton-root-QxIconButton-root-QxHeaderBlock-closeButton"
            type="button"
          >
            <div
              class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
            >
              <svg
                fill="none"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.70714 17.7071C7.31661 18.0976 6.68345 18.0976 6.29292 17.7071C5.9024 17.3166 5.9024 16.6834 6.29292 16.2929L10.5858 12L6.29293 7.70711C5.9024 7.31658 5.9024 6.68342 6.29293 6.29289C6.68345 5.90237 7.31662 5.90237 7.70714 6.29289L12 10.5858L16.2929 6.29289C16.6834 5.90237 17.3166 5.90237 17.7071 6.29289C18.0977 6.68342 18.0977 7.31658 17.7071 7.70711L13.4142 12L17.7071 16.2929C18.0977 16.6834 18.0977 17.3166 17.7071 17.7071C17.3166 18.0976 16.6834 18.0976 16.2929 17.7071L12 13.4142L7.70714 17.7071Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </button>
        </div>
        <div
          class="QxModal-body css-19ur24o-QxModal-body"
          style="min-height: NaNpx;"
        >
          Body
        </div>
        <div
          class="QxFooterBlock QxFooterBlock_size_medium QxFooterBlock_direction_vertical QxSidePage-footerBlock css-l1hdy0-QxSidePage-footerBlock-QxFooterBlock-root"
        >
          <button
            class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_brand QxBaseButton_type_contained QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-3dyhpy-QxBaseButton-root-QxButton-root"
            type="button"
          >
            <div
              class="QxButton-content css-ovifzf-QxButton-content"
            >
              Success
            </div>
          </button>
          <button
            class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_secondary QxBaseButton_type_outlined QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-aql2t3-QxBaseButton-root-QxButton-root"
            type="button"
          >
            <div
              class="QxButton-content css-ovifzf-QxButton-content"
            >
              Secondary
            </div>
          </button>
          <button
            class="QxBaseButton QxBaseButton_size_medium QxBaseButton_color_danger QxBaseButton_type_outlined QxBaseButton_borderRadius_medium QxButton QxButton_size_medium css-1fi0prz-QxBaseButton-root-QxButton-root"
            type="button"
          >
            <div
              class="QxButton-content css-ovifzf-QxButton-content"
            >
              Danger
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`SidePage style params size medium 1`] = `
<body
  style="padding-right: 1024px; overflow: hidden;"
>
  <div />
  <div
    aria-hidden="false"
    class="QxOverScreen QxOverScreen_placement_right QxOverScreen_mounted QxModal QxModal_size_medium QxModal_scrollBehaviour_body QxModal_hasHeader QxSidePage css-1tn48qf-QxOverScreen-root-QxModal-root-QxSidePage-root"
    data-component="QxOverScreen"
    data-index="0"
    data-testid="testStyleParams-size-medium"
    datatype="overscreen"
    role="presentation"
    tabindex="0"
  >
    <div
      aria-hidden="false"
      class="QxBackdrop css-lak5sv-QxBackdrop-root-QxBackdrop-root appear-active"
      data-component="QxBackdrop"
    />
    <div
      class="QxModal-scrollContainer QxSidePage-scrollContainer css-zezqa0-QxSidePage-scrollContainer-QxModal-scrollContainer-QxSidePage-scrollContainer-QxModal-scrollContainer appear-active"
      data-component="QxOverScreen-child"
    >
      <div
        class="QxModal-box QxSidePage-box css-3oh5up-QxSidePage-box-QxModal-box"
      >
        <div
          class="QxHeaderBlock QxHeaderBlock_size_medium css-9oje8r-QxHeaderBlock-root"
        >
          <div
            class="QxHeaderBlock-content css-8aatdw-QxHeaderBlock-content"
          >
            <div
              class="QxHeaderBlock-title css-1p40syo-QxHeaderBlock-title"
            />
            <div
              class="QxHeaderBlock-subTitle css-12h5hex-QxHeaderBlock-subTitle"
            />
          </div>
          <button
            class="QxBaseButton QxBaseButton_size_small QxBaseButton_color_secondary QxBaseButton_type_text QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_small QxHeaderBlock-closeButton css-yj9ie1-QxBaseButton-root-QxIconButton-root-QxHeaderBlock-closeButton"
            type="button"
          >
            <div
              class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
            >
              <svg
                fill="none"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.70714 17.7071C7.31661 18.0976 6.68345 18.0976 6.29292 17.7071C5.9024 17.3166 5.9024 16.6834 6.29292 16.2929L10.5858 12L6.29293 7.70711C5.9024 7.31658 5.9024 6.68342 6.29293 6.29289C6.68345 5.90237 7.31662 5.90237 7.70714 6.29289L12 10.5858L16.2929 6.29289C16.6834 5.90237 17.3166 5.90237 17.7071 6.29289C18.0977 6.68342 18.0977 7.31658 17.7071 7.70711L13.4142 12L17.7071 16.2929C18.0977 16.6834 18.0977 17.3166 17.7071 17.7071C17.3166 18.0976 16.6834 18.0976 16.2929 17.7071L12 13.4142L7.70714 17.7071Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`SidePage style params size small 1`] = `
<body
  style="padding-right: 1024px; overflow: hidden;"
>
  <div />
  <div
    aria-hidden="false"
    class="QxOverScreen QxOverScreen_placement_right QxOverScreen_mounted QxModal QxModal_size_small QxModal_scrollBehaviour_body QxModal_hasHeader QxSidePage css-1tn48qf-QxOverScreen-root-QxModal-root-QxSidePage-root"
    data-component="QxOverScreen"
    data-index="0"
    data-testid="testStyleParams-size-small"
    datatype="overscreen"
    role="presentation"
    tabindex="0"
  >
    <div
      aria-hidden="false"
      class="QxBackdrop css-lak5sv-QxBackdrop-root-QxBackdrop-root appear-active"
      data-component="QxBackdrop"
    />
    <div
      class="QxModal-scrollContainer QxSidePage-scrollContainer css-zezqa0-QxSidePage-scrollContainer-QxModal-scrollContainer-QxSidePage-scrollContainer-QxModal-scrollContainer appear-active"
      data-component="QxOverScreen-child"
    >
      <div
        class="QxModal-box QxSidePage-box css-halxhf-QxSidePage-box-QxModal-box"
      >
        <div
          class="QxHeaderBlock QxHeaderBlock_size_small css-11mwf9r-QxHeaderBlock-root"
        >
          <div
            class="QxHeaderBlock-content css-8aatdw-QxHeaderBlock-content"
          >
            <div
              class="QxHeaderBlock-title css-1epjsp2-QxHeaderBlock-title"
            />
            <div
              class="QxHeaderBlock-subTitle css-q0oaiy-QxHeaderBlock-subTitle"
            />
          </div>
          <button
            class="QxBaseButton QxBaseButton_size_small QxBaseButton_color_secondary QxBaseButton_type_text QxBaseButton_borderRadius_medium QxIconButton QxIconButton_size_small QxHeaderBlock-closeButton css-yj9ie1-QxBaseButton-root-QxIconButton-root-QxHeaderBlock-closeButton"
            type="button"
          >
            <div
              class="QxIconButton-icon css-10kmd5c-QxIconButton-icon"
            >
              <svg
                fill="none"
                height="24"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.70714 17.7071C7.31661 18.0976 6.68345 18.0976 6.29292 17.7071C5.9024 17.3166 5.9024 16.6834 6.29292 16.2929L10.5858 12L6.29293 7.70711C5.9024 7.31658 5.9024 6.68342 6.29293 6.29289C6.68345 5.90237 7.31662 5.90237 7.70714 6.29289L12 10.5858L16.2929 6.29289C16.6834 5.90237 17.3166 5.90237 17.7071 6.29289C18.0977 6.68342 18.0977 7.31658 17.7071 7.70711L13.4142 12L17.7071 16.2929C18.0977 16.6834 18.0977 17.3166 17.7071 17.7071C17.3166 18.0976 16.6834 18.0976 16.2929 17.7071L12 13.4142L7.70714 17.7071Z"
                  fill="currentColor"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;
